--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="standard_wait_moment">Wait a moment</string>
     <string name="standard_process_finished">Finished Process</string>
     <string name="standard_fail_add_media_store">Failed to add to mediastore system</string>
+    <string name="standard_action_canceled">The action has been canceled</string>
+    <string name="standard_unknown_error">Unknown error on the action</string>
+    <string name="standard_text_cancel">Cancel</string>
 
     <!-- here go strings for  content_crop_square -->
 
@@ -111,6 +114,19 @@
     <string name="send_receiving_image">Receiving Image Response</string>
     <string name="send_image_received_success">IMAGE RECEIVED SUCCESSFULL</string>
     <string name="send_error_receiving">ERROR WHILE WAITING FOR RESPONSE. PROCESS FINISHED</string>
+    <string name="send_try_connection_server">Try </string>
+    <string name="send_sending_parameters">Sending algorithm parameters</string>
+    <string name="send_sending_capture_percent">Percent sent</string>
+    <string name="send_try_time">time</string>
+    <string name="send_error_rec_1">Current port is used</string>
+    <string name="send_error_rec_2">Server has not been response</string>
+    <string name="send_error_rec_3">Action canceled by user</string>
+    <string name="send_error_rec_4">Error trying to get inputstream</string>
+    <string name="send_error_rec_5">Error reading data from server</string>
+    <string name="send_error_rec_6">Error on the server side.</string>
+    <string name="send_remaining_time">Listen Timeout in: </string>
+
+
     <string name="sett_ip_address_server">IP Address Server</string>
     <string name="sett_example_192_168_10_1">Example 192.168.10.1</string>
     <string name="sett_port_server">Port Server</string>
@@ -131,7 +147,7 @@
 
 
     <string name="menu_import">Import</string>
-    <string name="menu_results">My Results</string>
+    <string name="menu_about">About</string>
     <string name="menu_settings">Settings</string>
 
     <string name="rv_no_execute">No executed algorithm</string>
@@ -140,5 +156,18 @@
     <string name="rv_executed_both">Executed in TH and CE</string>
     <string name="menu_title_app">Remote Image Processing</string>
     <string name="android_studio_android_com">Send images for remote high performance processing</string>
+
+
+
+    <string name="title_activity_about">About</string>
+    <string name="about_label_title_net" translatable="false">Nombre de la Red</string>
+    <string name="about_title_net" translatable="false">Red de desarrollo de procesamiento de imágenes y aplicaciones distribuídas utilizando nuevas tecnologías.</string>
+    
+    <string name="about_label_title_proj" translatable="false">Nombre del Proyecto</string>
+    <string name="about_title_proj" translatable="false">Procesamiento digital de imágenes utilizando programación en GPU accesible a través de dispositivos móviles en una arquitectura distribuída.</string>
+    
+    <string name="about_label_academic_participants" translatable="false">Cuerpos Académicos Participantes</string>
+    <string name="menu_results">Results</string>
+
 
 </resources>
